- Fixed bug #39346 (Unsetting a static variable inside a destructor causes
  segfault later on). (Dmitry)
- Fixed bug #39056 (Interbase NUMERIC data type error). (Lars W)
- Fixed bug #38468 (Unexpected creation of cycle). (Dmitry)
- Fixed bug #37964 (Reflection shows private methods of parent class).
  (Felipe, Marcus)
- Fixed bug #37911 (preg_replace_callback() ignores named groups). (Nuno)
- Fixed bug #36128 (Interbase PDO - timestamp columns return NULL). (Lars W)
- Fixed bug #35386 (firebird: first row is null). (Lars W)
- Fixed bug #35163 (Array elements can lose references). (Dmitry)
- Fixed bug #32143 (ibase_query() causing IBserver 7 crash with NULL param as
  link-id). (Lars W)
- Fixed bug #30907 (ibase_query() crashes (same bug as #32143). (Lars W)
- Fixed bug #30690 (Resource handle from ibase_execute becomes invalid after 
  return). (Lars W)
- Fixed bug #27372 (parse error loading browscap.ini at apache startup).
  (Jani)

30 Aug 2007, PHP 5.2.4
- Removed --enable-versioning configure option. (Jani)

- Upgraded PCRE to version 7.2 (Nuno)
- Updated timezone database to version 2007.6. (Derick)

- Improved openssl_x509_parse() to return extensions in readable form. (Dmitry)

- Enabled changing the size of statement cache for non-persistent OCI8 
  connections. (Chris Jones, Tony)

- Changed "display_errors" php.ini option to accept "stderr" as value which 
  makes the error messages to be outputted to STDERR instead of STDOUT with 
  CGI and CLI SAPIs (FR #22839). (Jani)
- Changed error handler to send HTTP 500 instead of blank page on PHP errors.
  (Dmitry, Andrei Nigmatulin)
- Changed mail() function to be always available. (Johannes)

- Added check for unknown options passed to configure. (Jani)
- Added persistent connection status checker to pdo_pgsql.
  (Elvis Pranskevichus, Ilia)
- Added support for ATTR_TIMEOUT inside pdo_pgsql driver. (Ilia)
- Added php_ini_loaded_file() function which returns the path to the actual
  php.ini in use. (Jani)