@@ -126,6 +126,7 @@ PHP                                                                        NEWS
 - Fixed bug #37964 (Reflection shows private methods of parent class).
   (Felipe, Marcus)
 - Fixed bug #37911 (preg_replace_callback() ignores named groups). (Nuno)
+- Fixed bug #37076 (SimpleXML ignores .=). (Felipe, Marcus)
 - Fixed bug #36128 (Interbase PDO - timestamp columns return NULL). (Lars W)
 - Fixed bug #35386 (firebird: first row is null). (Lars W)
 - Fixed bug #35163 (Array elements can lose references). (Dmitry)
